# vietnamese-document-ocr

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py  routes_documents.py  routes_evaluation.py  routes_export.py  routes_health.py  routes_ocr.py  routes_review.py
backend/app/db/: session.py
backend/app/evaluation/: dataset.py  diagnostics.py  metrics.py  normalize.py  private_samples.py  report.py  run.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: document.py
backend/app/services/: preprocessing.py
backend/app/services/export/: writers.py
backend/app/services/extraction/: rules.py
backend/app/services/ocr/: base.py  factory.py  mock_adapter.py  paddle_adapter.py
backend/app/services/storage/: local.py
backend/tests/: test_evaluation.py  test_extraction_rules.py  test_ocr_adapters.py  test_private_samples.py  test_workflow.py
backend/vietnamese_document_ocr_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/eval/: README.md
data/samples/: README.md
docs/: real-document-local-test-protocol.md  vietnamese-document-source-registry.md
docs/plans/: milestone-10-realistic-synthetic-stress.md  milestone-11-stress-extraction-robustness.md  milestone-11b-extraction-false-positive-hardening.md  milestone-14-local-private-document-harness.md  milestone-4-eval-coverage.md  milestone-5-ppocrv6-smoke.md  milestone-6-paddleocr-smoke.md  milestone-7-real-ocr-diagnostics.md  (+2 more)
frontend/: package-lock.json  package.json
(+39 files in other folders)
